// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalFollowButton /> should render a button to follow a proposal 1`] = `
<Connect(LoginOverlay)>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    className="btn"
    disabled={false}
    id="proposal-follow-btn"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <FormattedMessage
      id="follow"
      values={Object {}}
    />
  </Button>
</Connect(LoginOverlay)>
`;

exports[`<ProposalFollowButton /> should render a button to unfollow a proposal 1`] = `
<Connect(LoginOverlay)>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    className="btn fifty-shade-of-grey "
    disabled={false}
    id="proposal-unfollow-btn"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <FormattedMessage
      id="following"
      values={Object {}}
    />
  </Button>
</Connect(LoginOverlay)>
`;
